# rag

./: .gitignore  ARCHITECTURE.md  PROJECT_GUIDE.md
airflow-mcp-rag/: .gitignore  QUICK_START.md  README.md  main.py  pyproject.toml  run_use_cases.py
airflow-mcp-rag/airflow_manager/: __init__.py  dag_generator.py  llm_dag_generator.py
airflow-mcp-rag/config/: config.yaml
airflow-mcp-rag/dags/: llm_generated_dag_1768202355.py  llm_generated_dag_1768202453.py  llm_generated_dag_1768202475.py  llm_generated_dag_1768202492.py  sqlite_to_duckdb_events_1768201513.py
airflow-mcp-rag/src/data/: create_sample_db.py
airflow-mcp-rag/src/data/processed/: analytics.duckdb
airflow-mcp-rag/src/data/raw/: airflow_dag_patterns.md  database_schemas.md  db_migration_guide.md
airflow-mcp-rag/src/embeddings/: document_loader.py  vector_store.py
airflow-mcp-rag/src/utils/: config.py  models.py
